--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -76,7 +76,7 @@
     - name: "11:15 - 11:30 Coffee Break"
     - name: "11:30 - 12:00 Chris Bail: [How to Publish a Book in Computational Social Science](https://sicss.io/2022/materials/professionalization/publishing_book.pdf)"
     - name: "12:00 - 1:00 Lunch"
-    - name: "1:00 - 2:30 Group Exercises: [Mapping Career Pathways in Computational Social Science]((https://sicss.io/2022/materials/professionalization/mapping_career_pathways.pdf)"
+    - name: "1:00 - 2:30 Group Exercises: [Mapping Career Pathways in Computational Social Science](https://sicss.io/2022/materials/professionalization/mapping_career_pathways.pdf)"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:30 Group Exercises"
     - name: "4:30 - 5:00 Wrap Up"
