--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -71,11 +71,10 @@
   events:
     - name: "9:00 - 9:15 Check In"
     - name: "9:15 - 10:30 Chris Bail (Duke University): [How to Publish an Article in Computational Social Science](https://sicss.io/2022/materials/professionalization/publishing_articles.pdf)"
-    - name: "10:30- 10:45 Coffee Break"
-    - name: "10:45 - 11:15 Chris Bail: [How to Get a Job in Computational Social Science](https://sicss.io/2022/materials/professionalization/getting_a_job.pdf)"
-    - name: "11:15 - 11:30 Coffee Break"
-    - name: "11:30 - 12:00 Chris Bail: [How to Publish a Book in Computational Social Science](https://sicss.io/2022/materials/professionalization/publishing_book.pdf)"
-    - name: "12:00 - 1:00 Lunch"
+    - name: "10:30 - 11:15 Chris Bail: [How to Get a Job in Computational Social Science](https://sicss.io/2022/materials/professionalization/getting_a_job.pdf)"
+    - name: "11:15 - 11:45 Chris Bail: [How to Get a Grant in Computational Social Science](https://sicss.io/2022/materials/professionalization/how_to_get_grants.pdf)"
+    - name: "11:45 - 12:15 Chris Bail: [How to Publish a Book in Computational Social Science](https://sicss.io/2022/materials/professionalization/publishing_book.pdf)"
+    - name: "12:15 - 1:00 Lunch"
     - name: "1:00 - 2:30 Group Exercises: [Mapping Career Pathways in Computational Social Science](https://sicss.io/2022/materials/professionalization/mapping_career_pathways.pdf)"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:30 Group Exercises"
