fix jacks twitter

--- a/_data/2022/duke/participants.yml
+++ b/_data/2022/duke/participants.yml
@@ -34,7 +34,7 @@
 - name: "Jack Lipei Tang"
   image: /assets/images/jack_lipei_tang.jpg
   bio: "Jack Lipei Tang is a Ph.D. student (ABD) at the Annenberg School for Communication and Journalism at the University of Southern California. His research interests include computational social science, digital activism, and political communication. He earned Bachelor degrees and M.Phil. from The Chinese University of Hong Kong."
-  website: https://twitter.com/jacktllp
+  website: https://twitter.com/jackltang
 
 - name: "Joao Souto Maior"
   image: /assets/images/joao_sm.jpg
