--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -35,6 +35,11 @@
 - name: Oluwaseyi Olopade
   image: /assets/images/
   bio: "<p align='justify'>Oluwaseyi Olopade is an early career researcher and a recent graduate of Financial Economics at the University of Johannesburg. Oluwaseyi’s current research aims to address the impact of out-of-pocket health expenditure and the state of well-being in Nigerian households. She holds an Honours Bachelor’s degree in Econometrics from the University of Johannesburg, and an undergraduate degree from Ajayi Crowther University.</p>"
+
+- name: Samuel Olumide
+  image: /assets/images/
+  bio: "<p align='justify'>Samuel Olumide is a master student and research assistant at the Department of Agricultural Economics at Ladoke Akintola University of Technology. Samuel is joining Department of Agricultural Economics at the University of Nebraska-Lincoln in the Fall of 2022 to continue his masters studies.</p>"
+  website: https://twitter.com/OlumideSamuel19
   
 - name: Marvellous Ngundu
   image: /assets/images/MNgundu.jpg
