--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -215,7 +215,7 @@
     - name: "10:00 - 10:15 Logistics and Introduction to [Group Exercise](https://docs.google.com/document/d/1GpM_Qb7LlyjFLdsl1T4ID67rXPBvoIzmV9eBxzvfxfQ/edit?usp=sharing) (*Zoom*) [(video)](https://youtu.be/ZawePd6DMSo)"
     - name: "10:15 - 11:30 Group Exercise Continuation: Extract Features from Tweets (*Zoom*) OR Content-Specific Office Hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective [(slide)](https://docs.google.com/presentation/d/1YlFlaNqY1DArII4OH838j_vhrPv6rg7xMimiBCXzExY/edit?usp=sharing) [(video)](https://youtu.be/1zSylGNvNpI) [(CBW praxis)](https://anthrosource.onlinelibrary.wiley.com/doi/full/10.1002/fea2.12040) [(Article)](https://doi.org/10.1002/fea2.12038) and varyCSS [(video)](https://youtu.be/tGn-1it1n98) (*Zoom*) (LIVE Q&A) OR R, STATA, and Python Office Hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective [(slide)](https://docs.google.com/presentation/d/1YlFlaNqY1DArII4OH838j_vhrPv6rg7xMimiBCXzExY/edit?usp=sharing) [(video)](https://youtu.be/1zSylGNvNpI) [(CBW praxis)](https://anthrosource.onlinelibrary.wiley.com/doi/full/10.1002/fea2.12040) [(Article)](https://doi.org/10.1002/fea2.12038) and varyCSS [(video)](https://youtu.be/tGn-1it1n98) (*Zoom*) [(LIVE Q&A)](https://youtu.be/sgxACRa8Ly0) OR R, STATA, and Python Office Hours with Mathematica TAs (as needed) (*Zoom*)
     
         - [Christen A. Smith, Ph.D.](https://liberalarts.utexas.edu/anthropology/faculty/cs23775), Associate Professor, African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin
       
@@ -223,13 +223,13 @@
       
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Group Exercise Continuation: Predict Features of Tweets Associated with Retweets and Produce Visualization (*Zoom*) OR Content-Specific Office Hours with Mathematica TAs (as needed) (*Zoom*)"
-    - name: "3:30 - 3:45 Group Exercise Debrief (*Zoom*)"
+    - name: "3:30 - 3:45 Group Exercise Debrief (*Zoom*) [(video)](https://youtu.be/h0BEYhWysAA)"
     - name: "3:45 - 4:00 Break"
     - name: "4:00 - 5:00 Inaugural SICSS-Howard/Mathematica 2022 Motivational Address [(slide)](https://docs.google.com/presentation/d/1gV2_ym0W82zaWTAm9fcazeoCz5iB5bfe/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/VINGgDNBZ2M)
     
         - [Paula Moreno](https://www.thedialogue.org/experts/paula-moreno/), Founder/President, Manos Visibles, Member, Ford Foundation Board of Trustees (2007 to 2010), and Minister of Culture, Columbia (2007 to 2010)"
     
-    - name: "5:00 - 5:15 Logistics (*Zoom*)"
+    - name: "5:00 - 5:15 Logistics (*Zoom*) [(video)](https://youtu.be/Z5qMkRlah0o)"
 
 
 - date: 2022-06-23
