--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -44,9 +44,9 @@
 - date: 2022-06-25
   name: Mass Collaboration & Experiments
   events:
-    - name: "10:00 - 11:00 Announcements & Introduction to Mass Collaboration & Experiments"
+    - name: "10:00 - 11:00 Announcements & Introduction to <a href='https://docs.google.com/presentation/d/167N8dzkDTSZPhHnwzJ0Cb7rpEpGp6tLM/edit?usp=sharing&ouid=112202172115649364045&rtpof=true&sd=true' target='_blank'>Mass Collaboration</a> & <a href='https://docs.google.com/presentation/d/1VRac0vDy3l3VcTHcUkZkDzMwAIeg_vgb/edit?usp=sharing&ouid=112202172115649364045&rtpof=true&sd=true' target='_blank'>Experiments</a>"
     - name: "11:00 - 1:00 Lightning Talks & Lunch"
-    - name: "1:00 - 2:00 SCALES"
+    - name: "1:00 - 2:00 <a href='https://docs.google.com/presentation/d/1_F8j33vwjGc1NmwRmd2ipFHQ2ig33tm8/edit?usp=sharing&ouid=112202172115649364045&rtpof=true&sd=true' target='_blank'>SCALES</a>"
     - name: "2:00 - 4:30 Group Formation For Week 2, Group Work"
 
 
