--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -33,7 +33,7 @@
   website: https://scholar.google.com/citations?user=By-AdooAAAAJ&hl=en
     
 - name: Oluwaseyi Olopade
-  image: /assets/images/
+  image: /assets/images/OOlopade.jpg
   bio: "<p align='justify'>Oluwaseyi Olopade is an early career researcher and a recent graduate of Financial Economics at the University of Johannesburg. Oluwaseyi’s current research aims to address the impact of out-of-pocket health expenditure and the state of well-being in Nigerian households. She holds an Honours Bachelor’s degree in Econometrics from the University of Johannesburg, and an undergraduate degree from Ajayi Crowther University.</p>"
 
 - name: Samuel Olumide
