--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -9,7 +9,7 @@
   website: http://alburez.me/
   
 - name: Lateef Amusa
-  image: /assets/images/LAMusa.JPG
+  image: /assets/images/LAmusa.jpg
   bio: "<p align='justify'>Lateef Amusa is a Statistician and Data Scientist with a PhD in Applied Statistics from the University of Kwazulu-Natal, South Africa. He is a faculty member in the Department of Statistics, University of Ilorin, and currently a post-doctoral fellow in the Centre for Applied Data Science at the University of Johannesburg, South Africa. Lateef is a tech enthusiast and is mainly interested in big data analytics and machine learning. He attended the second SICSS held at the Unversity of Capetown in 2019.</p>"
   website: 
   
