--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -290,10 +290,10 @@
 - date: 2022-06-27
   name: "Day 6: Work on Group Projects"
   events:
-    - name: "Mathematica TAs are Available via Email for Consultation (please see Slack)"
+    - name: "Mathematica TAs are Available via Email/Zoom for Consultation Starting on Tuesday"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
-    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: "Interrogating Data Collection Methods Focused on African and African Descendants: Challenges and Opportunities” [(Poster)](https://drive.google.com/file/d/1lGozCPxZIR-HLLTFDFluwYdobf4KoQhH/view)(*Zoom*) (LIVE Q&A)
+    - name: '10:00 - 11:30 SICSS-Africa + African Descendants Inaugural Panel: "Interrogating Data Collection Methods Focused on African and African Descendants: Challenges and Opportunities” [(Poster)](https://drive.google.com/file/d/1lGozCPxZIR-HLLTFDFluwYdobf4KoQhH/view) [(LIVE Q&A - Webex)](https://mathematicaevents.webex.com/mathematicaevents/j.php?RGID=r0bc365c7a126bf134ef83e355e6b4369)
       
       
         **Speakers**
@@ -319,12 +319,12 @@
         
         - [Hannah De los Santos, Ph.D.](https://www.researchgate.net/profile/Hannah-De-Los-Santos), Lead Data Scientist, Model-based Analytics Department, MITRE"
         
-    - name: "1:00 - 2:00 Round 1-6 (Ten Minutes Each) (*Zoom*)"
-    - name: "2:00 - 2:15 Break"
-    - name: "2:15 - 3:15 Round 7-12 (*Zoom*)"
-    - name: "3:15 - 3:30 Break"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 2:25 Round 1-7 (Ten Minutes Each) (*Zoom*)"
+    - name: "2:25 - 2:40 Break"
+    - name: "2:40 - 3:30 Family Free For All"
     - name: "3:30 - 4:00 Group Debrief (Join Research Teams) (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #1: "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/ZXstvgxY0Hs) - LIVE Session to Include Q&A and Office Hour [(slide)](https://docs.google.com/presentation/d/1eOxfSEa48KFQILR4o5MN_D9aPgQfdNh2UTwE62oYLGA/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #1: "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/ZXstvgxY0Hs) - LIVE Session to Include Q&A and Office Hours [(slide)](https://docs.google.com/presentation/d/1eOxfSEa48KFQILR4o5MN_D9aPgQfdNh2UTwE62oYLGA/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
         
         - [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Assistant Professor, Information Sciences, Cornell University'
     
@@ -332,7 +332,7 @@
 - date: 2022-06-28
   name: "Day 7: Work on Group Projects"
   events:
-    - name: "Mathematica TAs are Available via Email for Consultation (please see Slack)"
+    - name: "Mathematica TAs are Available via Email for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
@@ -358,15 +358,15 @@
 
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #2: "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE Session to Include Q&A and Office Hour [(slide)](https://drive.google.com/file/d/1Zc2CtECfPOP9kujbVfxSfRlXJBnI5jde/view?ts=62a6327b) (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #2: "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE Session to Include Q&A and Office Hours [(slide)](https://drive.google.com/file/d/1Zc2CtECfPOP9kujbVfxSfRlXJBnI5jde/view?ts=62a6327b) (*Zoom*) (LIVE Q&A)
     
-        - [Brandeis Marshall, Ph.D.](https://www.brandeismarshall.com/), CEO DataedX Group and Professor of Computer Science Spelman College (on sabbatical leave)'
+        - [Brandeis Marshall, Ph.D.](https://www.brandeismarshall.com/), Chief Executive Officer, DataedX Group & Professor, Computer Science, Spelman College (on sabbatical leave)'
     
     
 - date: 2022-06-29
   name: "Day 8: Work on Group Projects"
   events:
-    - name: "Mathematica TAs are Available via Email for Consultation (please see Slack)"
+    - name: "Mathematica TAs are Available via Email for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
@@ -375,7 +375,7 @@
         - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost, Graduate Studies, Dean of the Graduate Division, & Professor, Graduate School of Education, University of California, Berkeley"  
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #3: "Using Uncommon Data to Understand Society and its People" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE Session to Include Q&A and Office Hour [(slide)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #3: "Using Uncommon Data to Understand Society and its People" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE Session to Include Q&A and Office Hours [(slide)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
 
         - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida'
 
@@ -383,7 +383,7 @@
 - date: 2022-06-30
   name: "Day 9: Work on Group Projects"
   events:
-    - name: "Mathematica TAs are Available via Email for Consultation (please see Slack)"
+    - name: "Mathematica TAs are Available via Email for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
     - name: "10:00 - 11:30 Mathematica Roundtable (*Zoom*) (LIVE Q&A)
@@ -410,7 +410,7 @@
         - [Mark Duerksen, Ph.D.](https://africacenter.org/experts/dr-mark-duerksen/), Research Associate, Africa Center for Strategic Studies" 
         
     - name: "1:00 - 4:00 Work on Group Projects (*Zoom*)"
-    - name: '4:00 - 5:30 Featured Presentation #4: "Data Science for Marketing" [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE Session to Include Q&A and Office Hour (*Zoom*) (LIVE Q&A)
+    - name: '4:00 - 5:30 Featured Presentation #4: "Data Science for Marketing" [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE Session to Include Q&A and Office Hours (*Zoom*) (LIVE Q&A)
     
         - [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior Lecturer, Marketing, Columbia Business School'
 
@@ -418,7 +418,7 @@
 - date: 2022-07-01
   name: "Day 10: Present Group Projects"
   events:
-    - name: "Mathematica TAs are Available via Email for Consultation (please see Slack)"
+    - name: "Mathematica TAs are Available via Email for Consultation (please see [SCHEDULE](https://docs.google.com/spreadsheets/d/1BbbPwVYmfHAT0vi2O_3kApd8aBKFcx0ishDXTHVNUo0/edit#gid=0))"
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
     - name: "10:00 - 11:30 SICSS-Howard/Mathematica 2022 Keynote Address (*Zoom*) [(video)](https://youtu.be/LnVkR9CjbW8)
