Update closing plenary

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -430,7 +430,7 @@
     - name: "12:20 - 4:00 Group and Individual Project Presentations (*Zoom*)"
     - name: "4:00 - 5:00 Closing Plenary and Q&A, Mathematica (*Zoom*) (video)
     
-        - TBD"
+        - [LaVerne H. Council](https://www.mathematica.org/news/laverne-h-council-appointed-to-mathematicas-board-of-directors ), Assistant Secretary for Information & Technology and Chief Information Officer for the Office of Information and Technology within the U.S. Department of Veterans Affairs, & Founder and the Chief Executive Officer of Emerald One, LLC"
         
     - name: "5:00 - 5:15 Break"
     - name: "5:15 - 5:45 SICSS-Howard/Mathematica Final Debrief and Conclusion (*Zoom*)"
