Add closing plenary speaker

--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -52,7 +52,10 @@ keynote:
 closing:
   title: Closing Plenary Speaker 
   people:
-    - name: Coming soon...
+    - name: LaVerne H. Council
+      image: /assets/images/LaVerne_Council.jpg
+      bio: "LaVerne H. Council is a founder and the chief executive officer of Emerald One, LLC and has held executive leadership positions with organizations such as Grant Thornton; Johnson & Johnson; Dell, Inc.; and Ernst & Young, LLC. In her role as the Assistant Secretary for the Office of Information and Technology and Chief Information Officer at the Department of Veterans Affairs, LaVerne not only led technology strategy, investment, and implementation for the largest civilian agency in the federal government, but also developed the most culturally diverse executive leadership team in the federal government."
+      website: https://www.mathematica.org/news/laverne-h-council-appointed-to-mathematicas-board-of-directors
 
 
 speakers: 
