--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -336,7 +336,7 @@
     - name: "[Participant Zoom Links](https://docs.google.com/document/d/1wPr0rmHvjjIJ7K8sv6IytATEH7fv6d99C-ovZurApqw/edit?usp=sharing)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
     - name: "10:00 - 12:00 Work on Group Projects (*Zoom*)"
-    - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel (*Zoom*) (LIVE Q&A)
+    - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel [(LIVE Q&A - Webex)](https://mathematicaevents.webex.com/mathematicaevents/j.php?RGID=r0f13d45c103df0b3c25939792dcddacf)
         
       
      
