--- a/_data/2022/oxford/schedule.yml
+++ b/_data/2022/oxford/schedule.yml
@@ -8,17 +8,17 @@
   events:
     - name: "09:30-10:00 Coffee and Arrivals"
     - name: "10:00-11:30 Research Talk: Ben Goldacre"
-    - name: "11:30-12:30 Workshop: Cassandra Gould Van Praag on 'An Introduction to Version Control'"
+    - name: "11:30-12:30 Workshop Cassandra Gould Van Praag: An Introduction to Version Control"
     - name: "12:30-14:00 Lunch at Nuffield College"
-    - name: "14:00-14:30 Workshop: Georgia Richards on 'Open Science and OSF'"
-    - name: "14:30-16:00 Workshop: Adam Kenny on 'Reproducible Research and Reproducible Manuscripts'"
-    - name: "16:00-17:00 Research Talk: Tom Douglas on 'The Ethics of Predicting Behaviour'"
+    - name: "14:00-14:30 Workshop Georgia Richards: on Open Science and OSF"
+    - name: "14:30-16:00 Workshop Adam Kenny: Reproducible Research and Reproducible Manuscripts"
+    - name: "16:00-17:00 Research Talk Tom Douglas: on The Ethics of Predicting Behaviour"
 
 - date: July 5, 2022
   name: Machine Learning
-    - name: "09:30-10:45 Workshop: Mark Verhagen on an 'Introduction to Machine Learning Part I'"
+    - name: "09:30-10:45 Workshop Mark Verhagen: Introduction to Machine Learning Part I"
     - name: "10:45-11:15 Coffee Break"
-    - name: "11:15-12:30 Workshop: Mark Verhagen on an 'Introduction to Machine Learning Part II'"
+    - name: "11:15-12:30 Workshop Mark Verhagen: Introduction to Machine Learning Part II"
     - name: "12:30-14:00 Lunch at Nuffield College"
     - name: "14:00-16:00 Top Secret Prediction Competition!"
     - name: "16:00-18:00 Research Talk: Indeed"
@@ -26,19 +26,19 @@
 - date: July 6, 2022
   name: Digital Trace and Geo-spatial Analysis
   events:
-    - name: "09:30-10:45 Workshop: Ridhi Kashyap on 'Digital Trace Data'"
+    - name: "09:30-10:45 Workshop Ridhi Kashyap: Digital Trace Data"
     - name: "10:45-11:15 Coffee Break"
-    - name: "11:15-12:30 Workshop: Tobias Rüttenauer on 'Geospatial Analysis'"
+    - name: "11:15-12:30 Workshop Tobias Rüttenauer: Geospatial Analysis"
     - name: "12:30-14:00 Lunch at Nuffield College"
     - name: "14:00-16:00 Group Exercise: Tobias and Ridhi"
-    - name: "16:00-18:00 Research Talk: Douglas Leasure on 'Digital Trace Data and Migration'"
+    - name: "16:00-18:00 Research Talk Douglas Leasure: Digital Trace Data and Migration"
 
 - date: July 7, 2022
   name: Non-Random Probability Sampling and Post-Stratification
   events:
-    - name: "09:30-10:45 Workshop: Oriol/Francesco on Non-Random Probability Sampling and Post-Stratification"
+    - name: "09:30-10:45 Workshop Oriol/Francesco: Non-Random Probability Sampling and Post-Stratification"
     - name: "10:45-11:15 Coffee Break"
-    - name: "11:15-12:30 Workshop: Oriol/Francesco on Non-Random Probability Sampling and Post-Stratification"
+    - name: "11:15-12:30 Workshop Oriol/Francesco: Non-Random Probability Sampling and Post-Stratification"
     - name: "12:30-14:00 Lunch at Nuffield College"
     - name: "14:00-16:00 Group Exercise: Maksim and Francesco"
     - name: "16:00-18:00 Research Talk: Meta"
@@ -46,9 +46,9 @@
 - date: July 8, 2022
   name: Text As Data: Day 1
   events:
-    - name: "09:30-10:45 Workshop: Blake Miller on 'Text as Data, Part 1'"
+    - name: "09:30-10:45 Workshop Blake Miller: Text as Data, Part 1"
     - name: "10:45-11:15 Coffee Break"
-    - name: "11:15-12:30 Workshop: Blake Miller on 'Text as Data, Part 2'"
+    - name: "11:15-12:30 Workshop Blake Miller: Text as Data, Part 2"
     - name: "12:30-14:00 Lunch at Nuffield College"
     - name: "14:00-16:00 Group Exercise: led by Blake Miller"
     - name: "16:00-18:00 Research Talk: Bo Zhao"
@@ -58,8 +58,8 @@
 - date: July 9, 2022
   name: Text As Data: Day 2
   events:
-    - name: "09:30-12:30 Workshop: Lena Voita ON 'Text as Data, Part 3'"
-    - name: "12:30-14:00 Lunch with Lena: Q & A on 'Text as Data'"
+    - name: "09:30-12:30 Workshop Lena Voita: Text as Data, Part 3"
+    - name: "12:30-14:00 Lunch with Lena: Q & A on Text as Data"
 
 - date: July 11, 2022
   name: Mostly Group Projects!
