--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -124,11 +124,11 @@
     - name: "11:00 - 11:15 Coffee Break"
     - name: "11:15 - 12:00 Group Projects Work Continued"
     - name: "12:00 - 1:00 Lunch"
-    - name: "1:00 - 2:30 Group Project Final Presentations"
+    - name: "1:00 - 2:30 Group Projects Work Continued"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:30 Group Project Final Presentations"
     - name: "4:30 - 5:00 Wrap Up"
-    - name: "5:00 - 7:00 Farewell Dinner"
+    - name: "6:00 - 8:00 Farewell Dinner"
   
 - date: 2022-06-30
   events:
