--- a/_data/2022/roma-tor-vergata/participants.yml
+++ b/_data/2022/roma-tor-vergata/participants.yml
@@ -75,8 +75,7 @@
   image: /assets/images/roma-tv/harba.JPG
   
 - name: Shazeda Ahmed
-  bio: 'Shazeda is a doctoral candidate at the University of California Berkeley School of Information, and a postdoctoral researcher at Princeton University's Center for Information Technology Policy. Shazeda's doctoral dissertation investigates how tech firms and the Chinese government are collaborating on the country’s social credit system. Her additional work focuses on perceptions of algorithmic discrimination and emotion recognition technologies in China, as well as applications of artificial intelligence in Chinese courtrooms.
-She was a pre-doctoral fellow at two Stanford University research centers, the Institute for Human-Centered Artificial Intelligence (HAI) and the Center for International Security and Cooperation (CISAC), and has previously worked as a researcher for Upturn, the Mercator Institute for China Studies, Ranking Digital Rights, and the Citizen Lab, and the AI Now Institute.'
+  bio: 'Shazeda is a doctoral candidate at the University of California Berkeley School of Information, and a postdoctoral researcher at Princeton University's Center for Information Technology Policy. Shazeda's doctoral dissertation investigates how tech firms and the Chinese government are collaborating on the country’s social credit system. Her additional work focuses on perceptions of algorithmic discrimination and emotion recognition technologies in China, as well as applications of artificial intelligence in Chinese courtrooms.She was a pre-doctoral fellow at two Stanford University research centers, the Institute for Human-Centered Artificial Intelligence (HAI) and the Center for International Security and Cooperation (CISAC), and has previously worked as a researcher for Upturn, the Mercator Institute for China Studies, Ranking Digital Rights, and the Citizen Lab, and the AI Now Institute.'
   image: /assets/images/roma-tv/shazeda.png
   
 - name: Thiago Matheus
