--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -317,10 +317,12 @@
     - name: "11:45 - 12:00 Logistics and Research Speed Dating Logistics (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #5: MITRE [(slide)](https://docs.google.com/presentation/d/1-qFSXovcEn366R6YVhsrJ7R3RYPg1Fbt/edit?usp=sharing&ouid=102551246792977652320&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/hHZffikMw0Y) (LIVE Q&A)
         
-        - [Hannah De los Santos, Ph.D.](https://www.researchgate.net/profile/Hannah-De-Los-Santos), Lead Data Scientist, Model-based Analytics Department, MITRE"
+        - [Hannah De los Santos, Ph.D.](https://www.researchgate.net/profile/Hannah-De-Los-Santos), Lead Data Scientist, Model-based Analytics Department, MITRE
         
-    - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 2:25 Round 1-7 (Ten Minutes Each) (*Zoom*)"
+        - [Saimun Habib](https://www.linkedin.com/in/saimun-habib-b5ba90192/), Associate Data Scientist, Model-based Analytics Department, MITRE"
+        
+    - name: "1:00 - 1:15 Introduction to Speed Dating (*Zoom*)"
+    - name: "1:15 - 2:25 Speed Dating Exercise (*Zoom*)"
     - name: "2:25 - 2:40 Break"
     - name: "2:40 - 3:30 Family Free For All"
     - name: "3:30 - 4:00 Group Debrief (Join Research Teams) (*Zoom*)"
@@ -401,8 +403,7 @@
           
         **Moderator**
         
-          - [Dawnavan Davis](https://www.mathematica.org/news/dr-dawnavan-davis-joins-mathematica-as-chief-equity-inclusion-officer), Vice President, Chief Equity and Inclusion Officer, Mathematica"
-        
+          - [Esteban J. Quiñones, Ph.D.](https://mathematica.org/staff/esteban-quinones), Researcher, Development Economist, International Division, Mathematica 
         
     - name: "11:30 - 12:00 Work on Group Projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies [(slide)](https://docs.google.com/presentation/d/1MAazFDFwORUbBSjcK8pwszsJr60V1FfV/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/MpYlsOicYD0) (LIVE Q&A)
