--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -403,7 +403,7 @@
           
         **Moderator**
         
-          - [Esteban J. Quiñones, Ph.D.](https://mathematica.org/staff/esteban-quinones), Researcher, Development Economist, International Division, Mathematica 
+          - [Esteban J. Quiñones, Ph.D.](https://mathematica.org/staff/esteban-quinones), Researcher, Development Economist, International Division, Mathematica"
         
     - name: "11:30 - 12:00 Work on Group Projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies [(slide)](https://docs.google.com/presentation/d/1MAazFDFwORUbBSjcK8pwszsJr60V1FfV/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) (*Zoom*) [(video)](https://youtu.be/MpYlsOicYD0) (LIVE Q&A)
