--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -328,7 +328,7 @@
     - name: "3:30 - 4:00 Group Debrief (Join Research Teams) (*Zoom*)"
     - name: '4:00 - 5:30 Featured Presentation #1: "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/ZXstvgxY0Hs) - LIVE Session to Include Q&A and Office Hours [(slide)](https://docs.google.com/presentation/d/1eOxfSEa48KFQILR4o5MN_D9aPgQfdNh2UTwE62oYLGA/edit?usp=sharing) (*Zoom*) (LIVE Q&A)
         
-        - [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Assistant Professor, Information Sciences, Cornell University'
+        - [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Associate Professor, Information Sciences, Cornell University'
     
   
 - date: 2022-06-28
