jias: Update schedule

--- a/_data/2022/jias/schedule.yml
+++ b/_data/2022/jias/schedule.yml
@@ -108,7 +108,8 @@
       [Slides](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/building-apps-bots/Rpres/Building_Apps_for_Social_Science_Research.html).
       [Annotated
       Code](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/building-apps-bots/rmarkdown/Building_Apps_and_Bots_for%20Social_Science_Research.html)."
-    - name: "13:00 - 14:00 Group Exercise"
+    - name: "13:00 - 14:00 [Group
+      Exercise](https://docs.google.com/document/d/1NNcF7N1kys6JTuicgOrGK5tM48vniDyl/edit)"
     - name: "14:00 - 16:00 Lecture: Timothy Khan Aikins (University of Cape Town)"
     - name: "16:00 - 17:00 Optional Group Work Continuation"
 
