--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -99,4 +99,8 @@
 - date: July 1, 2022
   name: Group Presentations
   events: 
-    - name: "Schedule to be posted."
+    - name: "9:00 - 10:00 Group work time to finalize presentations"
+    - name: "10:00 - 12:00 Group presentations"
+    - name: "12:00 - 12:30 Closing"
+    - name: "12:30 - 1:30 Lunch"
+
