--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -76,7 +76,7 @@
     - name: "9:00 - 10:00 Group work time"
     - name: "10:00 - 11:30 Talk by P.M. Aronow"
     - name: "11:30 - 1:00 Lunch"
-    - name: "1:00 - 3:00 Group work time"
+    - name: "1:00 - 3:00 Group work time (First project milestone due)"
     - name: "3:00 - 4:30 Talk by Tamar Mitts"
 
 - date: June 29, 2022
