--- a/_data/2022/ndsu/participants.yml
+++ b/_data/2022/ndsu/participants.yml
@@ -85,7 +85,7 @@
 
 - name: Kurt Williams
   image: /assets/images/Kurtwilliam.jpg
-  bio: "Kurt Williams is a STEM education researcher interested in improving educational equity by leveraging data for evidence-based policymaking. He is currently a PhD candidate in STEM Education at North Dakota State University and formerly an intern in the U.S. Department of Education Office of the Chief Data Officer."
+  bio: "Kurt Williams is a STEM education researcher interested in improving educational equity by leveraging data for evidence-based policymaking. Kurt is now a PhD candidate in STEM Education at North Dakota State University and formerly an intern in the U.S. Department of Education Office of the Chief Data Officer."
   website: https://williakr.github.io/index.html
 
 - name: Shuxi Wu
