--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -82,7 +82,7 @@
   name: Group work day
   events: 
     - name: "9:00 - 11:00 Group work time"
-    - name: "11:00 - 11:45 Tutorial on spatial data by Jeffrey Coltman-Cormier"
+    - name: "11:00 - 11:45 Tutorial on spatial data by Jeffrey Coltman-Cormier. [Tutorial Materials](https://drive.google.com/drive/folders/1WoTGuxhPx3ZdoocokOe0r7QdiAHeL5nY?usp=sharing)"
     - name: "12:00 - 1:30 Talk by Gonzalo Rivero"
     - name: "1:30 - 2:30 Lunch"
     - name: "2:30 - 5:00 Group work time"
